--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,16 @@
-mysql:
-  image: mysql:5.7
-  ports:
-    - "3306:3306"
-  environment:
-    - MYSQL_ROOT_PASSWORD=
-    - MYSQL_ALLOW_EMPTY_PASSWORD=true
-    - MYSQL_USER=weightreductor
-    - MYSQL_PASSWORD=weightreductor
-    - MYSQL_DATABASE=weightreductor
-  volumes:
-    - "./conf.d:/etc/mysql/conf.d:ro"
+version: '2.0'
+services:
+  mysql:
+    image: mysql:5.7
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=
+      - MYSQL_ALLOW_EMPTY_PASSWORD=true
+      - MYSQL_USER=weightreductor
+      - MYSQL_PASSWORD=weightreductor
+      - MYSQL_DATABASE=weightreductor
+    volumes:
+      - my-datavolume:/var/lib/mysql
+volumes:
+  my-datavolume:
