--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-# database init, supports mysql too
-database=hsqldb
-spring.datasource.schema=classpath*:db/${database}/schema.sql
-spring.datasource.data=classpath*:db/${database}/data.sql
+spring.datasource.url=jdbc:mysql://localhost/weightreductor
+spring.datasource.username=weightreductor
+spring.datasource.password=weightreductor
+# SQL is written to be idempotent so this is safe
+spring.datasource.initialization-mode=always
 
 # Web
 spring.thymeleaf.mode=HTML
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 
 # Hibernate will bootstrap in a separate thread while the rest of your application’s startup processing proceeds in parallel
