Docker compose doesn't create db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/weightreductor
+spring.datasource.schema=classpath*:db/schema.sql
 spring.datasource.username=weightreductor
 spring.datasource.password=weightreductor
 # SQL is written to be idempotent so this is safe
@@ -8,7 +9,7 @@ spring.datasource.initialization-mode=always
 spring.thymeleaf.mode=HTML
 
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
 
 # Hibernate will bootstrap in a separate thread while the rest of your application’s startup processing proceeds in parallel
