Nothing changed tbh, if you drop db, remove malfunctioning volume with docker compose down -v

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ spring.datasource.initialization-mode=always
 spring.thymeleaf.mode=HTML
 
 # JPA
+
+# DO NOT USE WHEN ALREADY IN PRODUCTION! INSTEAD PROVIDE CREATE TABLES SCRIPT AND MIGRATIONS!
 spring.jpa.hibernate.ddl-auto=none
+
 spring.jpa.open-in-view=true
 
 # Hibernate will bootstrap in a separate thread while the rest of your application’s startup processing proceeds in parallel
