--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/weightreductor
+spring.datasource.url=jdbc:mysql://localhost/weightreductor?serverTimezone=Europe/Warsaw
 spring.datasource.schema=classpath*:db/schema.sql
 spring.datasource.username=weightreductor
 spring.datasource.password=weightreductor
